fairway-sf/force-app/main/default/objects/Golf_Session__c/Golf_Session__c.object-meta.xml
<CustomObject>
    <label>Golf Session</label>
    <pluralLabel>Golf Sessions</pluralLabel>
    <description>An actual play or practice session within a Bay Reservation. A reservation may contain more than one session (e.g. range warm-up, then a round).</description>
    <nameField>
        <label>Session Name</label>
        <type>AutoNumber</type>
        <displayFormat>SESS-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>