fairway-sf/force-app/main/default/objects/Golf_Session__c/fields/Avg_Ball_Speed__c.field-meta.xml
<CustomField>
    <fullName>Avg_Ball_Speed__c</fullName>
    <label>Avg Ball Speed (mph)</label>
    <description>Average ball speed across all shots in session. Populated by SessionAggregateHandler trigger.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>