fairway-sf/force-app/main/default/objects/Golf_Session__c/fields/Avg_Carry_Distance__c.field-meta.xml
<CustomField>
    <fullName>Avg_Carry_Distance__c</fullName>
    <label>Avg Carry Distance (yds)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>1</scale>
</CustomField>