fairway-sf/force-app/main/default/objects/Golf_Session__c/fields/Avg_Club_Speed__c.field-meta.xml
<CustomField>
    <fullName>Avg_Club_Speed__c</fullName>
    <label>Avg Club Speed (mph)</label>
    <description>Populated only when Data_Tier = Ball + Club on shots.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>