fairway-sf/force-app/main/default/objects/Golf_Session__c/fields/Bay__c.field-meta.xml
<CustomField>
    <fullName>Bay__c</fullName>
    <label>Bay</label>
    <type>Lookup</type>
    <referenceTo>Simulator_Bay__c</referenceTo>
    <relationshipName>Golf_Sessions</relationshipName>
    <relationshipLabel>Golf Sessions</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>