fairway-sf/force-app/main/default/objects/Golf_Session__c/fields/Best_Carry__c.field-meta.xml
<CustomField>
    <fullName>Best_Carry__c</fullName>
    <label>Best Carry (yds)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>1</scale>
</CustomField>