fairway-sf/force-app/main/default/objects/Golf_Session__c/fields/Course_Played__c.field-meta.xml
<CustomField>
    <fullName>Course_Played__c</fullName>
    <label>Course Played</label>
    <type>Text</type>
    <length>100</length>
</CustomField>