fairway-sf/force-app/main/default/objects/Golf_Session__c/fields/Data_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Data_Processing_Status__c</fullName>
    <label>Data Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Imported</fullName><default>false</default><label>Imported</label></value>
            <value><fullName>Processed</fullName><default>false</default><label>Processed</label></value>
            <value><fullName>Error</fullName><default>false</default><label>Error</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>