fairway-sf/force-app/main/default/objects/Golf_Session__c/fields/Fairways_Hit__c.field-meta.xml
<CustomField>
    <fullName>Fairways_Hit__c</fullName>
    <label>Fairways Hit</label>
    <description>Rounds only.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>