fairway-sf/force-app/main/default/objects/Golf_Session__c/fields/Reservation__c.field-meta.xml
<CustomField>
    <fullName>Reservation__c</fullName>
    <label>Reservation</label>
    <type>Lookup</type>
    <referenceTo>Bay_Reservation__c</referenceTo>
    <relationshipName>Golf_Sessions</relationshipName>
    <relationshipLabel>Golf Sessions</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>