fairway-sf/force-app/main/default/objects/Golf_Session__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <label>Service Appointment</label>
    <type>Lookup</type>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipName>Golf_Sessions</relationshipName>
    <relationshipLabel>Golf Sessions</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The bay-session/booking (Scheduler ServiceAppointment) this shot-tracking Golf_Session__c belongs to. Populated by FairwaySessionConsoleController.ensureCheckedInSession, called from the kiosk at check-in time. Note: Salesforce does not support a &lt;unique&gt; constraint on Lookup fields, so one-session-per-appointment is enforced by ensureCheckedInSession's own idempotency check plus a FOR UPDATE lock, not the platform.</description>
</CustomField>