fairway-sf/force-app/main/default/objects/Golf_Session__c/fields/Session_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Session_Duration_Minutes__c</fullName>
    <label>Session Duration (min)</label>
    <description>Computed from Session_Start__c and Session_End__c when session closes.</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>