fairway-sf/force-app/main/default/objects/Golf_Session__c/fields/Session_End__c.field-meta.xml
<CustomField>
    <fullName>Session_End__c</fullName>
    <label>Session End</label>
    <type>DateTime</type>
</CustomField>