fairway-sf/force-app/main/default/objects/Golf_Session__c/fields/Simulator_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Simulator_Session_Id__c</fullName>
    <label>Simulator Session ID</label>
    <type>Text</type>
    <length>100</length>
    <description>The raw session identifier from the simulator/launch monitor software.</description>
</CustomField>