fairway-sf/force-app/main/default/objects/Golf_Session__c/fields/Total_Putts__c.field-meta.xml
<CustomField>
    <fullName>Total_Putts__c</fullName>
    <label>Total Putts</label>
    <description>Rounds only.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>