fairway-sf/force-app/main/default/objects/Golf_Session__c/fields/Total_Shots__c.field-meta.xml
<CustomField>
    <fullName>Total_Shots__c</fullName>
    <label>Total Shots</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>