fairway-sf/force-app/main/default/objects/Golf_Session__c/listViews/Fairway_Active_Sessions.listView-meta.xml
<ListView>
    <fullName>Fairway_Active_Sessions</fullName>
    <label>Active Sessions</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <columns>NAME</columns>
    <columns>Bay__c</columns>
    <columns>Reservation__c</columns>
    <columns>Session_Type__c</columns>
    <columns>Session_Start__c</columns>
    <columns>Total_Shots__c</columns>
</ListView>